# slackd

./: LICENSE  README.md  app.config  slackd.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs
