name:                slackd
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/aniketd/slackd#readme
license:             BSD3
license-file:        LICENSE
author:              Aniket Deshpande
maintainer:          anicake@gmail.com
copyright:           Aniket Deshpande 2017
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 1.0
                     , http-client >= 0.5
                     , http-client-tls >= 0.3
                     , http-types
  default-language:    Haskell2010

executable slackd
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , slackd
                     , aeson
                     , http-client
                     , bytestring >= 0.10
                     , wai
                     , warp
                     , http-types
  default-language:    Haskell2010

test-suite slackd-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , slackd
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/aniketd/slackd
